[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uts-pamod"
version = "0.1.0"
description = "Async Python API for the UTSPAMx photosynthesis optical sensor"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["photosynthesis", "fluorescence", "sensor", "uart", "optical"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
    "Framework :: AsyncIO",
]
dependencies = [
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/uts_pamod"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
